# stag

./: CMakeLists.txt  README.md
src/: Decoder.cpp  Drawer.cpp  EDInterface.cpp  Ellipse.cpp  Marker.cpp  PoseRefiner.cpp  Quad.cpp  QuadDetector.cpp  Stag.cpp  StagDetector.cpp  example.cpp  utility.cpp
src/ED/: ED.cpp  EDInternals.cpp  EDLines.cpp  GradientOperators.cpp  ImageSmooth.cpp  LineSegment.cpp  MyMath.cpp  NFA.cpp  Utilities.cpp  ValidateEdgeSegments.cpp
